Fixed adjustment to boxes with flex-wrap

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ button
     justify-content: center;
     align-items: center;
     gap: 50px;
+    flex-wrap: wrap;
 }
 
 .t
